[gd_scene load_steps=10 format=2]

[ext_resource path="res://SecondaryScenes/Distance_Attacks/Fireball.gd" type="Script" id=1]
[ext_resource path="res://Sprites/N_Player/fire_shoot/Layer 1_sprite_07.png" type="Texture" id=2]
[ext_resource path="res://Sprites/N_Player/fire_shoot/Layer 1_sprite_08.png" type="Texture" id=3]
[ext_resource path="res://Sprites/N_Player/fire_shoot/Layer 1_sprite_09.png" type="Texture" id=4]
[ext_resource path="res://Sprites/N_Player/fire_shoot/Layer 1_sprite_10.png" type="Texture" id=5]
[ext_resource path="res://Sprites/N_Player/fire_shoot/Layer 1_sprite_05.png" type="Texture" id=6]
[ext_resource path="res://Sprites/N_Player/fire_shoot/Layer 1_sprite_06.png" type="Texture" id=7]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "Destroying",
"speed": 10.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "Traveling",
"speed": 4.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 14.1515

[node name="Fireball" type="Area2D"]
script = ExtResource( 1 )

[node name="SpriteFireball" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "Traveling"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.23, 3.22 )
shape = SubResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[connection signal="body_entered" from="." to="." method="_on_Fireball_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
